Fix clipping of the first line of text

--- a/src/components/IntroHeader.css
+++ b/src/components/IntroHeader.css
@@ -1,6 +1,6 @@
 #intro {
   display: flex;
-  margin-top: 25vh;
+  padding-top: 25vh;
   margin-bottom: 30rem;
   flex-direction: column;
   font-size: min(4vw, 1.5rem);
